[package]
name = "ultraplonk-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]


[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2", rev = "5cd5e140f4631556d2fc666b210058b74179e635" }
halo2_gadgets = { git = "https://github.com/zcash/halo2", rev = "5cd5e140f4631556d2fc666b210058b74179e635" }
plotters = { version = "0.3.0", optional = true }
